# 009_Trade_Journal

./: .gitignore  .gitignore~  .~lock.PINTOOBHAIYA COPY.xlsx#  README.md  pyproject.toml  sftp_upload.exp  start.sh  start.txt  tradejournal.service  tradeservice.service
backend/: config.py  database.py  init_db.sql  main.py  models.py  requirements.txt  schemas.py  trading_journal.db  trading_journal.db-shm  trading_journal.db-wal
backend/certs/: server.crt  server.key
static/: index.html  script.js  style.css
